--- a/1808.03798/decay8.tex
+++ b/1808.03798/decay8.tex
@@ -14,10 +14,9 @@
 \usepackage{mdframed}
 \usepackage{url}
 \usepackage{wasysym}
-\usepackage[hmargin=2.4cm,vmargin=2.8cm]{geometry}
 %\usepackage{fancyhdr}
 %\usepackage{yfonts}
-\usepackage{undertilde}
+%\usepackage{accent}
 %\usepackage{sidecap}
 \usepackage{slashed}
 %\usepackage{floatrow}
@@ -25,11 +24,57 @@
 \numberwithin{equation}{section}
 %\pagestyle{fancy}
 \renewcommand*{\hbar}{\mathalpha{\usebox{\myhbar}}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 % \setmainfont[Mapping=tex-text]{Calibri}
 %\usepackage{amsthm}
 \begin{document}
 \title{Decays of unstable quantum systems}
 \author{Charis Anastopoulos\footnote{anastop@physics.upatras.gr}\\ {\small Department of Physics, University of Patras, 26500 Greece} }
+\date{8 Dec 2018}
 \maketitle
 
 \begin{abstract}
@@ -39,7 +84,7 @@ In this article, we present both general methods that can be adapted to a large 
 
 \end{abstract}
 
-
+\newpage
 
 \section{Introduction}
 
@@ -770,9 +815,9 @@ We defined the function
 R(a) := \int_0^{\infty} \frac{dy e^{-iy}\sqrt{y}} {y - a}. \label{fai}
 \end{eqnarray}
 For $\mbox{Re} \; a > 0$, the integral (\ref{fai})  can be expressed analytically in terms of the Fresnel integrals $C(x) = \int_0^x ds \cos(s^2)$ and $S(x) =  \int_0^x ds \cos(s^2)$. We find \cite{ASt},
-\begin{eqnarray}
-R(a) = (1-i) \sqrt{\frac{\pi }{2}}-\pi  e^{-i a} \sqrt{-a}-(1+i)e^{-i a}\pi \sqrt{a}\left[C\left(\sqrt{\frac{2}{\pi }} \sqrt{a}\right)+i S\left(\sqrt{\frac{2}{\pi }} \sqrt{a}\right)\right]. \label{closedat}
-\end{eqnarray}
+\begin{multline}
+R(a) = (1-i) \sqrt{\frac{\pi }{2}}- \\ \pi  e^{-i a} \sqrt{-a}-(1+i)e^{-i a}\pi \sqrt{a}\left[C\left(\sqrt{\frac{2}{\pi }} \sqrt{a}\right)+i  S\left(\sqrt{\frac{2}{\pi }} \sqrt{a}\right)\right]. \label{closedat}
+\end{multline}
 Eq. (\ref{closedat}) is a closed expression for the persistence amplitude that is valid for all times. The logarithm of the persistence probability $|{\cal A}(t)|^2$ as a function of time is plotted in Fig. 2. The agreement with exponential decay is excellent until $t \simeq 15 \Gamma^{-1}$. The transition to power-law decay is accompanied by increasingly stronger oscillations that originate from the asymptotic behavior of the Fresnel integrals.
 
 It is important to emphasize that the oscillations of Fig. 2 signify the breakdown not only of exponential decay, but of the  persistence probability method. They imply that the probability density (\ref{decprob2}) takes negative values. Hence, the   method does not correlate with the experimental records, namely, the number of product particles recorded at each moment of time. The result strongly suggests that the persistence probability method is not reliable outside the regime of exponential decay.
@@ -910,9 +955,10 @@ Eq. (\ref{lngaid}) implies that
 
  The level-shift function $F(E)$ involves a term $ - \ln(E/\omega_0) -   \ln(E/\omega_0 - 1) - \ln(E/\omega_0 - [E/\omega_0]) + \ln \Gamma( [E/\omega_0] + 1 -  E/\omega_0)$, which can be written as
 $ \ln \left( \frac{\Gamma(1+ [E/\omega_0] - E/\omega_0)   \Gamma(E/\omega_0 - [E/\omega_0]) }{ \Gamma(E/\omega_0) }\right)$. Hence,
-  \begin{eqnarray}
-  F(E) =   - \frac{\lambda^2\log (\Lambda/\omega_0) }{2\pi}z + \frac{\lambda^2\omega_0 }{2\pi} \ln \left( \frac{ \Gamma(E/\omega_0) }{ \Gamma(E/\omega_0 - [E/\omega_0])\Gamma(1+ [E/\omega_0] - E/\omega_0)  }\right).
-  \end{eqnarray}
+  \begin{multline}
+  F(E) =   - z \frac{\lambda^2\log (\Lambda/\omega_0) }{2\pi} \, + \\ 
+  + \, \frac{\lambda^2\omega_0 }{2\pi} \ln \left( \frac{ \Gamma(E/\omega_0) }{ \Gamma(E/\omega_0 - [E/\omega_0])\Gamma(1+ [E/\omega_0] - E/\omega_0)  }\right).
+  \end{multline}
   Both $F(E)$ and $\Gamma(E)$ have finite  discontinuities across the resonances $E = n \omega_0$, for $n = 1, 2, \ldots$.
 
 
@@ -1290,10 +1336,10 @@ where
 {\cal B}(t, {\pmb x}) =   \lim_{\epsilon \rightarrow 0} \int_{-\infty+i \epsilon }^{\infty+i \epsilon } \frac{dE V_ {\pmb x}(E)  e^{-iEt}}{[E - \Omega - \Sigma_a(E) }.
 \end{eqnarray}
 Following the same steps that lead to  Eq. (\ref{mainampl}), we find that
-\begin{eqnarray}
-{\cal B}(t,  {\pmb x}) =
+\begin{multline}
+{\cal B}(t,  {\pmb x}) = \\
    \int_{0 }^{\infty } \frac{dE e^{-iEt}}{2\pi}  \frac{ \frac{1}{2}\Gamma(E) [V_{\pmb x}^+(E) +V_{\pmb x}^-(E) ] + i [E - \Omega - F(E)][V_{\pmb x}^+(E) - V_{\pmb x}^-(E) ]  }{ [E - \Omega - F(E)]^2 + \frac{1}{4}[\Gamma(E)]^2} \label{mainampl44}
-\end{eqnarray}
+\end{multline}
  where
  \begin{eqnarray}
  V_{\pmb x}^{\pm}(E, {\pmb x}) :=   \lim_{\eta \rightarrow 0 } V_{\pmb x}(E \pm i \eta).
@@ -1301,11 +1347,11 @@ Following the same steps that lead to  Eq. (\ref{mainampl}), we find that
 
 We evaluate the amplitude (\ref{mainampl44})  in the WWA, in which the dominant contribution to the integral comes
  from values of $E$ near $\Omega$. Hence,
-\begin{eqnarray}
-{\cal B}(t,  {\pmb x}) &\simeq&
+\begin{align}
+{\cal B}(t,  {\pmb x}) &\simeq
   \frac{1}{2 \pi }  \int_{-\infty }^{\infty } dE e^{-iEt}  \frac{ \Gamma  [V_{\pmb x}^+(\Omega) +V_{\pmb x}^-(\Omega) ]  + i [E - \Omega - \delta E][V_{\pmb x}^+(\Omega)  - V_{\pmb x}^-(\Omega) ]   }{ [E - \Omega - \delta E]^2 + \frac{1}{4}\Gamma^2} \nonumber \\
-&=& \frac{1}{2} e^{-i (\Omega t + \delta E)t - \frac{1}{2}\Gamma t}   V_+(\Omega; {\pmb x})   , \label{mainampl44b}
-\end{eqnarray}
+&= \frac{1}{2} e^{-i (\Omega t + \delta E)t - \frac{1}{2}\Gamma t}   V_+(\Omega; {\pmb x})   , \label{mainampl44b}
+\end{align}
 where we set $\Gamma = \Gamma(\Omega)$ and $\delta E = F(\Omega)$. Hence, we obtain
 \begin{eqnarray}
 P(t, {\pmb x})  = \frac{1}{4} C|V_{\pmb x}^+(\Omega) |^2 e^{-\Gamma t}. \label{decayGl}
@@ -1345,9 +1391,10 @@ where the functions
 and $\gamma$ is the Euler-Mascheroni constant \cite{ASt}.
 
 We straightforwardly evaluate
-\begin{eqnarray}
-V_r^{\pm}(E;r) = \frac{\lambda}{2\sqrt{2} \pi^2r}  \left[ [\gamma + \ln(rE) + \mbox{Cin}(rE)] \sin rE - \mbox{si}(rE)\cos rE \mp i \pi \sin(rE)\right].
-\end{eqnarray}
+\begin{multline}
+V_r^{\pm}(E;r) = \\
+\frac{\lambda}{2\sqrt{2} \pi^2r}  \bigl[ [\gamma + \ln(rE) + \mbox{Cin}(rE)] \sin rE - \mbox{si}(rE)\cos rE \mp i \pi \sin(rE)\bigl].
+\end{multline}
 
 We assume that the detectors are located at macroscopic distance from the decaying atom, so that $\tilde{\Omega}r >> 1$. Then, the terms involving the trigonometric integrals vanish, and the imaginary part of $V_+(\Omega, r)$  dominates. Eq. (\ref{decayGl}) gives
 \begin{eqnarray}
@@ -1561,7 +1608,7 @@ Rev. 98, 145 (1955).
 
  \bibitem{nonMark}     H.-P. Breuer, E.-M. Laine, J. Piilo, and B. Vacchini, {\em Colloquium: Non-Markovian Dynamics in Open Quantum Systems}, Rev. Mod. Phys. 88, 021002 (2016).
 
-\bibitem{BKEC} M. Beau, J. Kiukas, I. L. Egusquiza, and A. del Campo, {\em Nonexponential Quantum Decay under Environmental Decoherence}, Phys. Rev. Lett. 119, 130401 (2017).
+\bibitem{BKEC} M. Beau, J. Kiukas, I. L. Egusquiza, and A. del Campo, {\em Nonexponential Quantum Decay under Environmental Decoherence}, Phys. Rev. Lett. 119, 130401 (2017).
 
 
 \bibitem{ADCM} A. del Campo, F. Delgado, G. García-Calderón, and J. G. Muga, {\em Decay by Tunneling of Bosonic and Fermionic Tonks-Girardeau Gases}, Phys. Rev. A74, 013605 (2006).
@@ -1619,7 +1666,7 @@ Fourier transform $A(t)$  satisfies
 \begin{eqnarray}
 \hat{V}' =  \hat{\sigma}_1  \sum_a \left(g_r     \hat{a}_r + g_r^*   \hat{a}_r^{\dagger} \right). \label{vsb}
 \end{eqnarray}
-Since $\hat{\sigma}_1 = \hat{\sigma}_+ + \hat{\sigma}_-$, the interaction term $\hat{V}'$ includes terms  $\hat{\sigma}_+  \hat{a}^{\dagger}_r$ and $\hat{\sigma}_-   \hat{a}_r$, in addition to the ones of  $\hat{V}$  of Εξ. (\ref{vlee3}).
+Since $\hat{\sigma}_1 = \hat{\sigma}_+ + \hat{\sigma}_-$, the interaction term $\hat{V}'$ includes terms  $\hat{\sigma}_+  \hat{a}^{\dagger}_r$ and $\hat{\sigma}_-   \hat{a}_r$, in addition to the ones of  $\hat{V}$. (\ref{vlee3}).
 
 Assuming the RPA, we find that the self-energy function  $\Sigma(z)$ is given by Eq. (\ref{selee}) as is the Lee model. Hence,
 \begin{eqnarray}
