--- a/1608.05873/1608.05873.tex
+++ b/1608.05873/1608.05873.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper,reqno]{article}
+\documentclass[12pt,reqno]{article}
 
 \usepackage{amsmath,latexsym,amssymb,amsthm}
 \usepackage{graphicx}
@@ -50,7 +50,6 @@
 \newcommand{\operone}{\mathbf{1}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
-\renewcommand{\H}{\mathcal{H}}
 \renewcommand{\O}{\mathbb{O}}
 \newcommand{\F}{\mathcal{F}}
 \renewcommand{\L}{\mathcal{L}}
@@ -78,6 +77,52 @@
 \renewcommand{\Re}{\operatorname{Re}}
 \renewcommand{\Im}{\operatorname{Im}}
 \newcommand{\FR}{Frauchiger and Renner}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+\renewcommand{\H}{\mathcal{H}}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \hfuzz1pc % Don't bother to report overfull boxes if overage is < 1pc
 \vfuzz1.2pt
