--- a/1608.05873/1608.05873.tex
+++ b/1608.05873/1608.05873.tex
@@ -167,6 +167,8 @@ University of York, \\[-2pt] \small Heslington, York, England YO10 5DD\\
 
 \end{abstract}
 
+\newpage
+
 \section{Introduction}
 
 In 1984 John Bell \cite{Bell:beables} proposed an interpretation of quantum field theory in which certain field variables always have definite values. This can be generalised to any quantum system \cite{QMPN}, giving a theory in which any chosen set of commuting observables --- the \emph{beables} of the theory --- always have definite values, and yet the results of measurements are always distributed as predicted by quantum mechanics. Bell's theory was an extension of Bohmian quantum mechanics.
