--- a/1611.01111/1611.01111-psu.tex
+++ b/1611.01111/1611.01111-psu.tex
@@ -12,7 +12,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -509,10 +509,10 @@ The steps of the protocol are
 \end{protocol}
 
 \begin{figure*}
-\begin{tikzpicture}[scale=0.6, box/.style={thick, color=blue, fill=blue!30, rounded corners=3pt},
+\begin{tikzpicture}[scale=0.55, box/.style={thick, color=blue, fill=blue!30, rounded corners=3pt},
                           sbox/.style={thick, color=orange, fill=orange!30, rounded corners=3pt},
                           box_plot/.style={thick, color=orange, fill=orange!30, rounded corners=3pt},
-                          every node/.style={font=\small}]
+                          every node/.style={font=\scriptsize}]
   \node (comment) at (0,3.5) {in final round: both measure ok};
   \draw [->, thick] (comment.south west) to[bend right] (-4,2.3);
   \draw [->, thick] (comment.south east) to[bend left] (4,2.3);
