--- a/1611.01111/1611.01111-psu.tex
+++ b/1611.01111/1611.01111-psu.tex
@@ -213,7 +213,7 @@ Generally, if two event sets~$E$ and~$F$ have some ``overlap,'' i.e., there exis
   &\exists \bm z \in W_F: (t, \bm x,\bm z) \in d_F(s) \\
   \Leftrightarrow \quad &\exists \bm y \in W_E: (t, \bm x, \bm y) \in d_E(s).\nonumber
 \end{IEEEeqnarray}
-This is the compatibility constraint introduced in~\cite{FrRen} and demands different plots to be copies of the information of the same corresponding story. It is possible due to the interoperability of classical information.\\
+This is the compatibility constraint introduced in~\cite{FrRen} and demands different plots to be copies of the information of the same corresponding story. It is possible due to the interoperability of classical information.
 
 \paragraph{Many worlds and distinguishability} Stories allow for multiple events happening at the same time, as illustrated in the following examples.
 \begin{displayquote}
@@ -328,7 +328,7 @@ All plots corresponding to a quantum experiment then relate to the joint probabi
 The setup of the original Wigner's-friend experiment is depicted in Fig~\ref{fig:Wigner}.
 An \emph{observer} --- the friend~$F$ --- performs a measurement~$M_F$ on the quantum system emitted by the source~$S$.
 Both the source and the friend constitute a joint quantum system which is then measured by a \emph{superobserver} --- Wigner~$W$ --- with a projective measurement~$M_W$.
-We say, Wigner has \emph{full quantum control} over the friend's lab.\\
+We say, Wigner has \emph{full quantum control} over the friend's lab.
 According to textbook quantum mechanics, the friend's measurement induces a collapse to the eigenvector associated with the observed measurement result.
 To Wigner, however, the source and the friend's memory appear as one big quantum system, which supposedly evolves unitarily, i.e., without a collapse.
 If the friend's measurement does not induce a collapse, does he actually obtain a definite measurement result?
