--- a/yoneda-speedrun/yoneda-speedrun-lucida.tex
+++ b/yoneda-speedrun/yoneda-speedrun-lucida.tex
@@ -23,7 +23,7 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{eulervm}
 \linespread{1.05}
 
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
