--- a/1609.04268/wells.tex
+++ b/1609.04268/wells.tex
@@ -20,7 +20,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
