--- a/quant-ph-0011082/verdammt.tex
+++ b/quant-ph-0011082/verdammt.tex
@@ -252,7 +252,7 @@ probability per unit time, certainly ends up with an empirically adequate
 result. The problem I want to discuss is that of formulating the theory 
 so as to make this argument as sound as its conclusion. I will argue that
 the germ of a solution was provided by John Bell in 1984
-(\cite{Bell:beables}; see also \cite{QMPN} and \cite{Bub:book}), but
+(\!\cite{Bell:beables}; see also \cite{QMPN} and \cite{Bub:book}), but
 that it needs to be transposed into a different interpretative framework
 in order to be fully satisfactory. In this paper I will do no more than suggest
 how this transposition might be achieved.
