--- a/1703.06230/rdhpp4.tex
+++ b/1703.06230/rdhpp4.tex
@@ -468,29 +468,28 @@ in \cite{erwin3}, but he never writes down a coupled Schr\"odinger-Maxwell syste
 to see how far his ideas might carry. Indeed, he would have found that modifications
 of his wave equation would have been necessary. This point is easily illustrated
 by studying the Schr\"odinger-Maxwell system for the hydrogen atom,
-\begin{eqnarray}\nonumber
-&&\!\!\!\mathrm{i}\hbar\frac{\partial\psi(\bm{x},t)}{\partial t}
+\begin{equation}
+\!\!\!\mathrm{i}\hbar\frac{\partial\psi(\bm{x},t)}{\partial t}
 +\frac{\hbar^2}{2m}\left(\bm{\nabla}+\mathrm{i}\frac{e}{\hbar}\bm{A}(\bm{x},t)\right)^2
 \psi(\bm{x},t)
-\\ \label{eq:motpsi}
-&&+\,\frac{\alpha_S\hbar c}{|\bm{x}|}\psi(\bm{x},t)=0,
-\end{eqnarray}
-\begin{eqnarray}\nonumber
-&&\!\!\!\left(\frac{1}{c^2}
+\label{eq:motpsi}
++\,\frac{\alpha_S\hbar c}{|\bm{x}|}\psi(\bm{x},t)=0,
+\end{equation}
+\begin{multline}
+\left(\frac{1}{c^2}
 \frac{\partial^2}{\partial t^2}-\Delta\right)
 \bm{A}(\bm{x},t)=
 -\,\mu_0\,\frac{e\hbar}{2\mathrm{i}m}
 \Big(
 \psi^+(\bm{x},t)\bm{\nabla}\psi(\bm{x},t)
-\\ \nonumber
-&&-\,\bm{\nabla}\psi(\bm{x},t)^+\cdot
-\psi(\bm{x},t)
+-\,\bm{\nabla}\psi(\bm{x},t)^+\cdot
+\psi(\bm{x},t) \\
 +2\mathrm{i}\frac{e}{\hbar}\psi^+(\bm{x},t)
 \bm{A}(\bm{x},t)\psi(\bm{x},t)\Big)
-\\ \label{eq:motA}
-&&-\,\frac{\mu_0 e}{4\pi}\frac{\partial}{\partial t}\int\!d^3\bm{x}'\,
+\,\frac{\mu_0 e}{4\pi}\frac{\partial}{\partial t}\int\!d^3\bm{x}'\,
 \frac{\bm{x}-\bm{x}'}{|\bm{x}-\bm{x}'|^3}|\psi(\bm{x}',t)|^2.
-\end{eqnarray}
+\label{eq:motA}
+\end{multline}
 This describes the coupling of the electromagnetic potential in Coulomb gauge,
 $\bm{\nabla}\cdot\bm{A}(\bm{x},t)=0$, to the wavefunction $\psi(\bm{x},t)$ for
 relative motion in the atom. It is a good approximation if the dominant wavelengths 
@@ -569,7 +568,7 @@ H_0&=&\int\!d^3\bm{x}\left(
 \right.
 \\
 &&
--\left.\psi^+(\bm{x})\frac{\alpha_S\hbar c}{|\bm{x}|}\psi(\bm{x})
+\qquad\qquad-\left.\psi^+(\bm{x})\frac{\alpha_S\hbar c}{|\bm{x}|}\psi(\bm{x})
 +\frac{1}{2\mu_0}\left(\bm{\nabla}\times\bm{A}(\bm{x})\right)^2\right)
 \end{eqnarray*}
 is the Hamiltonian of decoupled hydrogen atoms and external photons
@@ -583,7 +582,7 @@ H_I&=&\int\!d^3\bm{x}\,
 [\psi^+(\bm{x})\cdot\bm{\nabla}\psi(\bm{x})
 \\ \label{eq:H1}
 &&
--\,\bm{\nabla}\psi^+(\bm{x})\cdot\psi(\bm{x})],
+\quad -\bm{\nabla}\psi^+(\bm{x})\cdot\psi(\bm{x})],
 \end{eqnarray}
 \begin{equation}\label{eq:H2}
 H_{II}=\int\!d^3\bm{x}\,\frac{e^2}{2m}\psi^+(\bm{x})
@@ -594,18 +593,18 @@ The Hamiltonian (\ref{eq:Hegamma}) is written in terms of the
 Schr\"o\-din\-ger picture field operators $\psi(\bm{x})$, $\bm{A}(\bm{x})$,
 and the electromagnetic field is quantized in Coulomb gauge, i.e. the
 photon field in the interaction picture is
-\begin{eqnarray}\nonumber
-\bm{A}(\bm{x},t)&=&\sqrt{\frac{\hbar\mu_0 c}{(2\pi)^3}}
+\begin{multline}
+\bm{A}(\bm{x},t)=\\
+\sqrt{\frac{\hbar\mu_0 c}{(2\pi)^3}}
 \int\!\frac{d^3\bm{k}}{\sqrt{2k}}\sum_{\alpha=1}^2
 \bm{\epsilon}_\alpha(\bm{k})
-\\ \nonumber
-&&\times\Big(
+\Big(
 a_\alpha(\bm{k})
 \exp[\mathrm{i}(\bm{k}\cdot\bm{x}-ckt)]
-\\ \label{eq:Axt}
-&&+a_{\alpha}^+(\bm{k})
+\label{eq:Axt}
++a_{\alpha}^+(\bm{k})
 \exp[-\mathrm{i}(\bm{k}\cdot\bm{x}-ckt)]\Big),
-\end{eqnarray}
+\end{multline}
 with $\bm{k}\cdot\bm{\epsilon}_\alpha(\bm{k})=0$,
 $\bm{\epsilon}_\alpha(\bm{k})\cdot\bm{\epsilon}_\beta(\bm{k})=\delta_{\alpha\beta}$,
 $[a_{\alpha}(\bm{k}),a_{\beta}(\bm{k}')]=0$, 
@@ -634,8 +633,7 @@ and polarization $\bm{\epsilon}_\alpha(\bm{k})$,
 \bm{|}\{C'\};\bm{k},\alpha\bm{\rangle}&=&
 \sum_{n,\ell,m_\ell}\!C'_{n,\ell,m_\ell}\!
 \int\!d^3\bm{x}\,\psi^+(\bm{x})a^+_\alpha(\bm{k})\bm{|}0\bm{\rangle}
-\\ \label{eq:linefinal}
-&&\times
+\label{eq:linefinal}
 \Psi_{n,\ell,m_\ell}(\bm{x}).
 \end{eqnarray}
 Here boldface Dirac notation $\bm{|}\ldots\bm{\rangle}$ is introduced for 
@@ -663,8 +661,7 @@ with the interaction picture (or Dirac picture) time evolution operator
 U_D(t,t')&=&
 \exp(\mathrm{i}H_0t/\hbar)
 \exp[-\mathrm{i}H(t-t')/\hbar]
-\\ \label{eq:UD}
-&&\times
+\label{eq:UD}
 \exp(-\mathrm{i}H_0t'/\hbar)
 \end{eqnarray}
 always produces the final state as a superposition of eigenstates,
