--- a/2108.07292/ref.bib
+++ b/2108.07292/ref.bib
@@ -1,3 +1,31 @@
+@article{adlam2022two,
+  title={Two Roads to Retrocausality},
+  author={Adlam, Emily},
+  journal={arXiv preprint arXiv:2201.12934},
+  year={2022},
+  url={https://arxiv.org/abs/2201.12934}
+}
+
+@article{sen2022analysis,
+  title={Analysis of the superdeterministic Invariant-set theory in a hidden-variable setting},
+  author={Sen, Indrajit},
+  journal={Proceedings of the Royal Society A},
+  volume={478},
+  number={2259},
+  pages={20210667},
+  year={2022},
+  publisher={The Royal Society},
+  doi={10.1098/rspa.2021.0667}
+}
+
+@book{georgii2011gibbs,
+  title={Gibbs measures and phase transitions},
+  author={Georgii, Hans-Otto},
+  year={2011},
+  publisher={de Gruyter},
+  isbn={9783110250299}
+}
+
 @article{Bell1964OnEPR,
   title={On the einstein podolsky rosen paradox},
   author={Bell, John S},
@@ -22,7 +50,8 @@
   title={Introduction to Measure Theory and Functional Analysis},
   author={Cannarsa, Piermarco and D'Aprile, Teresa},
   year={2015},
-  publisher={Springer International Publishing}
+  publisher={Springer International Publishing},
+  doi={10.1007/978-3-319-17019-0}
 }
 
 @article{Clauser1969CHSH,
@@ -62,11 +91,24 @@
 }
 
 @article{Hance2021Wavefunctions,
-  title={Wavefunctions can Simultaneously Represent Knowledge and Reality},
-  author={Hance, Jonte R and Rarity, John and Ladyman, James},
-  journal={arXiv preprint arXiv:2101.06436},
-  year={2021},
-  url={https://arxiv.org/abs/2101.06436}
+  title={Could wavefunctions simultaneously represent knowledge and reality?},
+  journal={Quantum Studies: Mathematics and Foundations},
+  year={2022},
+  month={Apr},
+  day={27},
+  issn={2196-5617},
+  doi={10.1007/s40509-022-00271-3}
+}
+
+@article{Hance2021Ensemble,
+  title={The wave function as a true ensemble},
+  author={Hance, Jonte R. and Hossenfelder, Sabine},
+  journal={Proceedings of the Royal Society A},
+  volume={478},
+  pages={20210705},
+  year={2022},
+  publisher={Royal Society},
+  doi={10.1098/rspa.2021.0705}
 }
 
 @article{Jahnel2010Sines,
@@ -77,11 +119,20 @@
   url={https://arxiv.org/abs/1006.2938}
 }
 
+@book{keynes1921treatise,
+  title={A treatise on probability},
+  author={Keynes, John Maynard},
+  year={1921},
+  publisher={Macmillan and Company, limited},
+  isbn={978-0-486-49580-4}
+}
+
 @book{Rogers1998Hausdorff,
   title={Hausdorff measures},
   author={Rogers, Claude Ambrose},
   year={1998},
-  publisher={Cambridge University Press}
+  publisher={Cambridge University Press},
+  doi={10.1017/S001309150000969X}
 }
 
 @article{Schlosshauer2013Attitudes,
@@ -92,7 +143,7 @@ number = {3},
 pages = {222-230},
 year = {2013},
 issn = {1355-2198},
-doi = {j.shpsb.2013.04.004},
+doi = {10.1016/j.shpsb.2013.04.004},
 author = {Maximilian Schlosshauer and Johannes Kofler and Anton Zeilinger}
 }
 
@@ -100,8 +151,8 @@ author = {Maximilian Schlosshauer and Johannes Kofler and Anton Zeilinger}
 title={Surveying the attitudes of physicists concerning foundational issues of Surveym mechanics},
   author={Sivasundaram, Sujeevan and Nielsen, Kristian Hvidtfelt},
   journal={arXiv preprint arXiv:1612.00676},
-  year={2016}
-}
+  year={2016},
+  url={https://arxiv.org/abs/1612.00676}
 }
 
 @article{Wharton2019Reformulations,
@@ -347,6 +398,18 @@ title={Surveying the attitudes of physicists concerning foundational issues of S
   author={Sen, Indrajit},
   journal={arXiv preprint arXiv:2107.04761},
   year={2021}
+}
+
+@article{Spekkens2007Evidence,
+  title={Evidence for the epistemic view of quantum states: A toy theory},
+  author={Spekkens, Robert W},
+  journal={Physical Review A},
+  volume={75},
+  number={3},
+  pages={032110},
+  year={2007},
+  publisher={APS},
+  doi={10.1103/PhysRevA.75.032110}
 }
 
 %High-Dim Entanglement/CVs
@@ -622,7 +685,8 @@ author = "René Heilmann and Markus Gräfe and Stefan Nolte and Alexander Szamei
   year={1956},
   publisher={The Mathematical Association of America},
   series={The Carus Mathematical Monographs},
-  pages={41}
+  pages={41},
+  doi={10.5948/9781614440116}
 }
 
 @article{Nguyen2020EntGravMeso,
@@ -751,4 +815,19 @@ doi={10.12942/lrr-1998-1}
   year={2012},
   publisher={Nature Publishing Group},
   doi={10.1038/NPHYS2309}
+}
+
+@article{Dube1993Fractal,
+author= {Dube, S.},
+title={Undecidable problems in fractal geometry},
+journal  = {Complex Systems}, 
+volume = 7, pages = {423-444},
+year= 1993}
+
+@book{blum1998complexity,
+  title={Complexity and real computation},
+  author={Blum, Lenore and Cucker, Felipe and Shub, Michael and Smale, Steve},
+  year={1998},
+  isbn={0387982817},
+  publisher={Springer Science \& Business Media}
 }
