--- a/2108.07292/main.tex
+++ b/2108.07292/main.tex
@@ -1,12 +1,54 @@
-\documentclass{article}
-\usepackage{times,fancyhdr}
+\documentclass[12pt]{article}
 \usepackage[dvips]{graphicx}
 \usepackage{amsmath,amssymb,bm}
 \usepackage{color}
 \usepackage{mathrsfs}
 \usepackage{setspace}
-\usepackage{hyperref}
-\usepackage{xcolor,soul}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \def\slash{/\hspace*{-2.2mm}}
 \newcommand{\intsum}{
@@ -32,7 +74,7 @@
 \affil[3]{Department of Physics, University of Oxford, UK}
 \affil[*]{jonte.hance@bristol.ac.uk}
 \affil[$\dagger$]{tim.palmer@physics.ox.ac.uk}
-\date{\today}
+\date{19 Jul 2022}
 
 \maketitle
 
@@ -289,7 +331,11 @@ While Bell's theorem is often said to imply that local causality (which is viola
 \textit{Acknowledgements---}
 We thank Sophie Inman and John Rarity for useful discussions. TP is funded by a Royal Society Research Professorship. SH acknowledges support by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) under grant number HO 2601/8-1. JRH is supported by the University of York's EPSRC DTP grant EP/R513386/1, and the EPSRC Quantum Communications Hub (funded by the EPSRC grants EP/M013472/1 and EP/T001011/1).
 
+\newpage
+
 \bibliographystyle{unsrturl}
+\raggedright
+
 \bibliography{ref.bib}
 
 \end{document}
