--- a/2010.01324/super_fine05b-psu.tex
+++ b/2010.01324/super_fine05b-psu.tex
@@ -572,8 +572,12 @@ defining what this means. In the next two sections we will see explicitly how th
 \section{Superdeterminism may or may not allow superluminal signaling}
 \label{suplum}
 
+Superdeterminism generically allows superluminial signaling, where I am using the word ``generic'' in the mathematical sense, meaning a property that holds for typical examples, unless further details are specified. 
+
+The relation between superdeterminism and superluminal signaling is most easily explained by the diagram in Figure \ref{fig1}. In a superdeterministic model, the outcome of the measurement prepared at {\bf P} and sent to the detector(s) depends on the detector settings at the time of measurement. The detector, however, can consist of multiple parts distributed over a space-like hypersurface, for example in points ${\bf D}_1$ and ${\bf D}_2$. The past lightcones of the two detectors have regions which do not overlap. If information from one of the non-overlapping parts, ${\bf X}$, is used for the detector setting ${\bf D}_1$, then this information can, in a superdeterministic model, in principle influence the outcome on the other detector ${\bf D}_2$. 
+
 %..........................................................................
-\begin{figure}[ht]
+\begin{figure}[t]
 \vspace*{0.3cm}
   \begin{center}
     \includegraphics[width=0.88\textwidth]{causal.png}
@@ -582,9 +586,6 @@ defining what this means. In the next two sections we will see explicitly how th
 \end{figure}
 %..........................................................................
 
-Superdeterminism generically allows superluminial signaling, where I am using the word ``generic'' in the mathematical sense, meaning a property that holds for typical examples, unless further details are specified. 
-
-The relation between superdeterminism and superluminal signaling is most easily explained by the diagram in Figure \ref{fig1}. In a superdeterministic model, the outcome of the measurement prepared at {\bf P} and sent to the detector(s) depends on the detector settings at the time of measurement. The detector, however, can consist of multiple parts distributed over a space-like hypersurface, for example in points ${\bf D}_1$ and ${\bf D}_2$. The past lightcones of the two detectors have regions which do not overlap. If information from one of the non-overlapping parts, ${\bf X}$, is used for the detector setting ${\bf D}_1$, then this information can, in a superdeterministic model, in principle influence the outcome on the other detector ${\bf D}_2$. 
 
 So, if the only thing you know about a model is that it is superdeterministic, then superluminal signaling cannot be excluded. But one cannot tell whether information can be submitted superluminally in a given model unless one specifies details of the model. The question whether and how much superluminal signaling is possible can therefore not be answered in general for all superdeterministic models. There are however a few general statements that can be made.
 
