--- a/1102.3667/1102.3667.tex
+++ b/1102.3667/1102.3667.tex
@@ -1,12 +1,56 @@
 %% LyX 2.0.0 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
-\documentclass[english,aps,preprint,showpacs]{revtex4}
+\documentclass[english,aps,showpacs,12pt]{revtex4-2}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
 \usepackage{color}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{esint}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
@@ -45,6 +89,7 @@ a Lindbladian description of finite-duration measurement}
 
 \affiliation{Instituto de Física de São Carlos, Universidade de São Paulo, P.O.
 Box 369, 13560-970, São Carlos, SP, Brazil}
+
 \begin{abstract}
 We consider the problem of the measurement of a system occurring during
 a finite time interval, while environmentally-induced noise decreases
@@ -64,6 +109,8 @@ of a qubit under phase noise during a finite-time measurement.
 } {03.65.Ta}{ Foundations of quantum mechanics; measurement theory} }
 
 \maketitle
+
+\newpage
 
 \section{Introduction}
 
@@ -147,7 +194,7 @@ series, as in \cite{key-19,key-20}, non-Markovian cases \cite{key-21,key-22,key-
 or time-dependent thermodynamic projectors, as in\cite{key-25,key-26}.
 
 The paper is structured as follows: the general problem is formulated
-in the Sec. 2, with the \textcolor{red}{definition} of superoperators
+in the Sec. 2, with the {definition} of superoperators
 and thermodynamic projectors; in Sec. 3, the necessary properties
 of these superoperators are demonstrated; and, in Sec. 4, the master
 equation is obtained. Finally, in Se. 5, we illustrate the method
@@ -161,9 +208,9 @@ an observable that commute with the unperturbed qubit Hamiltonian.
 The most general form for a master equation, according to the quantum
 dynamical semigroups approach, is the Lindblad equation \cite{key-1,key-2,key-5,key-6},
 
-\begin{multline}
+\begin{equation}
 \frac{d}{dt}\hat{\rho}_{SB}=-\frac{i}{\hbar}\left[\hat{H},\hat{\rho}_{SB}\right]+\underset{j}{\sum}\left(\hat{L}_{j}\hat{\rho}_{SB}\hat{L}_{j}^{\dagger}-\frac{1}{2}\left\{ \hat{L}_{j}^{\dagger}\hat{L}_{j},\hat{\rho}_{SB}\right\} \right),\label{lindblad}
-\end{multline}
+\end{equation}
 where $\hat{H}$ is the total Hamiltonian and the $\hat{L}_{j}$ are
 the Lindblads (Hermitian operators for measurement description, not-Hermitian
 for dissipation description) that represent a Markovian interaction.
@@ -444,7 +491,8 @@ Let us formally integrate the first of the Eqs. (\ref{sist1}):
 we obtain
 \begin{eqnarray}
 \frac{d}{dt}\left[\mathcal{P}\hat{\alpha}\left(t\right)\right] & = & \left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\left[\mathcal{P}\hat{\alpha}\left(0\right)\right]+\left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\int_{0}^{t}dt^{\prime}\,\left[\mathcal{P}\mathcal{G}\left(t^{\prime}\right)\mathcal{P}\right]\left[\mathcal{P}\hat{\alpha}\left(t^{\prime}\right)\right]\nonumber \\
- & + & \left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\int_{0}^{t}dt^{\prime}\,\left[\mathcal{P}\mathcal{G}\left(t^{\prime}\right)\mathcal{Q}\right]\left[\mathcal{Q}\hat{\alpha}\left(t^{\prime}\right)\right]+\left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{Q}\right]\left[\mathcal{Q}\hat{\alpha}\left(t\right)\right].\label{eqPalfa2}
+ & & \quad +  \left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\int_{0}^{t}dt^{\prime}\,\left[\mathcal{P}\mathcal{G}\left(t^{\prime}\right)\mathcal{Q}\right]\left[\mathcal{Q}\hat{\alpha}\left(t^{\prime}\right)\right]\\
+ && \quad + \left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{Q}\right]\left[\mathcal{Q}\hat{\alpha}\left(t\right)\right].\label{eqPalfa2}
 \end{eqnarray}
  From Eq. (\ref{eqQalfa2}) we see that the third term on the right-hand
 side of Eq. (\ref{eqPalfa2}) is of the third order in ${\hat{H}}_{{S{\normalcolor {\normalcolor {\normalcolor B}}}}}{,}$
@@ -482,15 +530,20 @@ we obtain
  & = & \hat{\rho}_{B}\left(0\right)\mathrm{Tr}_{B}\left\{ \mathcal{G}\left(t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right).
 \end{eqnarray*}
  But, following from Eq. (\ref{defG}),
-\begin{eqnarray*}
-\mathrm{Tr}_{B}\left\{ \mathcal{G}\left(t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right) & = & \mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{S}t-\mathcal{B}t\right)\mathcal{F}\exp\left(\mathcal{S}t+\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right)\\
- & = & \mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{S}t\right)\exp\left(-\mathcal{B}t\right)\mathcal{F}\exp\left(Bt\right)\exp\left(\mathcal{S}t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right)\\
- & = & \exp\left(-\mathcal{S}t\right)\mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{B}t\right)\mathcal{F}\exp\left(\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\} \exp\left(\mathcal{S}t\right)\hat{\rho}_{S}\left(0\right){,}
-\end{eqnarray*}
+\begin{align*}
+\mathrm{Tr}_{B}\left\{ \mathcal{G}\left(t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right) & = \mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{S}t-\mathcal{B}t\right)\mathcal{F}\exp\left(\mathcal{S}t+\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\} \hat{\rho}_{S}\left(0\right)\\
+ & = \mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{S}t\right)\exp\left(-\mathcal{B}t\right)\mathcal{F}\exp\left(Bt\right)\exp\left(\mathcal{S}t\right)\hat{\rho}_{B}\left(0\right)\right\} \\
+ & \quad \,\,\hat{\rho}_{S}\left(0\right)\\
+ & = \exp\left(-\mathcal{S}t\right)\mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{B}t\right)\mathcal{F}
+\exp\left(\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\}\\
+& \quad\, \exp\left(\mathcal{S}t\right)\hat{\rho}_{S}\left(0\right){,}
+\end{align*}
  i.e.,
-\begin{eqnarray*}
-\left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\left[\mathcal{P}\hat{\alpha}\left(0\right)\right] & = & \hat{\rho}_{B}\left(0\right)\exp\left(-\mathcal{S}t\right)\mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{B}t\right)\mathcal{F}\exp\left(\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\} \exp\left(\mathcal{S}t\right)\hat{\rho}_{S}\left(0\right).
-\end{eqnarray*}
+\begin{multline}
+\left[\mathcal{P}\mathcal{G}\left(t\right)\mathcal{P}\right]\left[\mathcal{P}\hat{\alpha}\left(0\right)\right] = \\
+ \hat{\rho}_{B}\left(0\right)\exp\left(-\mathcal{S}t\right)\mathrm{Tr}_{B}\left\{ \exp\left(-\mathcal{B}t\right)\mathcal{F}\exp\left(\mathcal{B}t\right)\hat{\rho}_{B}\left(0\right)\right\} \\
+ \exp\left(\mathcal{S}t\right)\hat{\rho}_{S}\left(0\right).
+\end{multline}
 
 
 Now, let us use Eq. (\ref{defHSB}):
@@ -662,13 +715,13 @@ With Eqs. (\ref{solB}) and (\ref{solS}) we are able to solve Eq.
 (\ref{eqFINAL}). Separating the system and environment terms, we
 obtain, in terms of Eq. (\ref{defR}):
 
-\begin{eqnarray*}
- & \mathcal{P}\mathcal{G}\left(t\right)\mathcal{G}\left(t'\right)\mathcal{P}\hat{\alpha}\left(t\right)=\\
- & =e^{-\mathcal{S}t}\hat{\sigma}_{z}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\hat{\sigma}_{z}\right]\right\} tr_{B}\left\{ e^{-\mathcal{B}t}\underset{k}{\sum}\hat{B}_{k}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\underset{k'}{\sum}\hat{B}_{k'}\right]\right\} \right\} \otimes\hat{\rho}_{B}+\\
- & -e^{-\mathcal{S}t}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\hat{\sigma}_{z}\right]\right\} \hat{\sigma}_{z}tr_{B}\left\{ e^{-\mathcal{B}t}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\underset{k}{\sum}\hat{B}_{k}\right]\right\} \underset{k'}{\sum}\hat{B}_{k'}\right\} \otimes\hat{\rho}_{B}+\\
- & -e^{-\mathcal{S}t}\hat{\sigma}_{z}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\hat{\sigma}_{z}\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\right]\right\} tr_{B}\left\{ e^{-\mathcal{B}t}\underset{k}{\sum}\hat{B}_{k}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\underset{k'}{\sum}\hat{B}_{k'}\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\right]\right\} \right\} \otimes\hat{\rho}_{B}+\\
- & +e^{-\mathcal{S}t}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\hat{\sigma}_{z}\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\right]\right\} \hat{\sigma}_{z}tr_{B}\left\{ e^{-\mathcal{B}t}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\underset{k}{\sum}\hat{B}_{k}\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\right]\right\} \underset{k'}{\sum}\hat{B}_{k'}\right\} \otimes\hat{\rho}_{B}{.}
-\end{eqnarray*}
+\begin{multline*}
+ \mathcal{P}\mathcal{G}\left(t\right)\mathcal{G}\left(t'\right)\mathcal{P}\hat{\alpha}\left(t\right)=\\
+ e^{-\mathcal{S}t}\hat{\sigma}_{z}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\hat{\sigma}_{z}\right]\right\} tr_{B}\left\{ e^{-\mathcal{B}t}\underset{k}{\sum}\hat{B}_{k}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\underset{k'}{\sum}\hat{B}_{k'}\right]\right\} \right\} \otimes\hat{\rho}_{B}\\
+  -e^{-\mathcal{S}t}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\hat{\sigma}_{z}\right]\right\} \hat{\sigma}_{z}tr_{B}\left\{ e^{-\mathcal{B}t}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\underset{k}{\sum}\hat{B}_{k}\right]\right\} \underset{k'}{\sum}\hat{B}_{k'}\right\} \otimes\hat{\rho}_{B}\\
+  -e^{-\mathcal{S}t}\hat{\sigma}_{z}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\hat{\sigma}_{z}\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\right]\right\} tr_{B}\left\{ e^{-\mathcal{B}t}\underset{k}{\sum}\hat{B}_{k}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\underset{k'}{\sum}\hat{B}_{k'}\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\right]\right\} \right\} \otimes\hat{\rho}_{B}\\
+  +e^{-\mathcal{S}t}\left\{ e^{\mathcal{S}\left(t-t'\right)}\left[\hat{\sigma}_{z}\left(e^{\mathcal{S}t'}\hat{R}\left(t\right)\right)\right]\right\} \hat{\sigma}_{z}tr_{B}\left\{ e^{-\mathcal{B}t}\left\{ e^{\mathcal{B}\left(t-t'\right)}\left[\underset{k}{\sum}\hat{B}_{k}\left(e^{\mathcal{B}t'}\hat{\rho}_{B}\right)\right]\right\} \underset{k'}{\sum}\hat{B}_{k'}\right\} \otimes\hat{\rho}_{B}{.}
+\end{multline*}
  Expanding the environmental superoperators using Eq. (\ref{solB})
 and grouping the similar terms, we have:
 
