--- a/hep-ph-0609174/FTSM.tex
+++ b/hep-ph-0609174/FTSM.tex
@@ -30,7 +30,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -1159,7 +1159,8 @@ bookmarksopenlevel=10
               }
             \end{center}
           \end{minipage}
-          \begin{minipage}[t]{282pt}
+          \begin{minipage}[t]{400pt}
+          \medskip
             External lines: For each external line, multiply by 1 (i.e., external lines
             don't contribute to the matrix element in this theory). However, one needs to keep
             track of the momentum of each particle entering or leaving the interaction. The momentum
@@ -1178,7 +1179,8 @@ bookmarksopenlevel=10
               }
             \end{center}
           \end{minipage}
-          \begin{minipage}[t]{282pt}
+          \begin{minipage}[t]{400pt}
+          \medskip
             Propagators between vertices are free propagators corresponding to the momentum
             of the particle. Note that particles of internal lines need not be on-shell, i.e.,
             $p^2=m^2$ need not hold! 
@@ -1197,7 +1199,9 @@ bookmarksopenlevel=10
               }
             \end{center}
           \end{minipage}
-          \begin{minipage}[t]{282pt}
+          \begin{minipage}[t]{400pt}
+          \bigskip\bigskip
+          \bigskip\bigskip
             Vertices yield a factor of the coupling constant. In this theory, there is only one
             species of particles, and the interaction term does not contain derivatives, so there
             is only one  vertex, and it does not depend on the momenta.
@@ -1217,7 +1221,8 @@ bookmarksopenlevel=10
               }
             \end{center}
           \end{minipage}
-          \begin{minipage}[t]{282pt}
+          \begin{minipage}[t]{400pt}
+          \medskip
             The momenta of internal loops are not fixed by the incoming momenta. For each
             undetermined loop momentum $p$, one integrates over all values of $p$. 
           \end{minipage}
