--- a/1512.02632/main.tex
+++ b/1512.02632/main.tex
@@ -16,7 +16,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
