--- a/9512027v1/9512027v1.tex
+++ b/9512027v1/9512027v1.tex
@@ -9,7 +9,28 @@
 %\textheight 22cm
 %\topmargin -10mm
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage[lf,semibold,serif,tt=false]{libertinus}
+\usepackage[libertine]{newtxmath}\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -22,13 +43,19 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{charter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[type1]{cabin}% sans serif
-\usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
-\usepackage[cal=boondoxo]{mathalpha}
-\linespread{1.05}
-\usepackage[letterpaper, margin=1.4in]{geometry}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 
 \newcommand\bq{\begin{quotation}}
